# mcp-litellm

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TOOLS.md  pyproject.toml
.github/workflows/: ci.yml
docs/implemented/: 2026-06-plan-adversarial-review-remediation.md
src/mcp_litellm/: __init__.py  __main__.py  _parsing.py  client.py  config.py  errors.py  models.py  route_catalog.py  server.py  service.py  tool_definitions.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_errors.py  test_models.py  test_route_catalog.py  test_server.py  test_service.py
tests/smoke/: __init__.py  test_adversarial_review_remediation.py
